--- a/zen-garden/zen-garden2/scss/partials/_layout.scss
+++ b/zen-garden/zen-garden2/scss/partials/_layout.scss
@@ -62,22 +62,23 @@
 
 
 //*first part of 1-3 rows*//
-.main>*{
-    max-width: 95vw;
-    margin: auto;
-}
+// .main>*{
+//     max-width: 95vw;
+//     margin: auto;
+// }
 @include breakpoint(medium) {
 .page-wrapper {
         display: grid;
     grid-gap: 5px;
         grid-template-columns: repeat(12, [col] 8.3333% ) ;
-        grid-template-rows: repeat(9, [row] 100px  );
-    max-width: 100vw;
+        grid-template-rows: repeat(9, [row] 300px  );
+    // max-width: 100%;
 
     }
 
     .intro {
       grid-column: col 1 / span 5;
+      grid-row: 1 / span 5;
     display: grid;
     grid-gap: 5px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -85,84 +86,77 @@
 
     header {
         grid-column: 1 / 5;
-        grid-row: 1;
+        grid-row: 1/ span 6;
         width: 100%;
-        @include star(1em, $star-color, 10em, 26em);
+        // @include star(1em, $star-color, 10em, 26em);
             }
 
     .summary {
         grid-column: 1 / 4;
         grid-row: 2;
-        @include star(1em, $star-color, 13em, 27em);
+        // @include star(1em, $star-color, 13em, 27em);
           }
 
     .preamble {
         grid-column: 1 / 4;
         grid-row: 6;
-        grid-row: 3;
-        @include star(1em, $star-color, 17em, 27em);
+        // @include star(1em, $star-color, 17em, 27em);
           }
 
 
     //second part of 4-8 rows
     .main {
-      grid-column: col 5 / span 3;
+      grid-column: col 1 / span 10;
+      grid-row: 1/ span 9;
     display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
   }
 
         .explanation {      //So What is This About?
-            grid-column: 1 / 2;
-            grid-row: 1;
-            @include star(1em, $star-color, 20em, 32em);
+            grid-column: 1 / span 2;
+            grid-row: 2;
+            // @include star(1em, $star-color, 20em, 32em);
         }
 
         .participation  {   //Participation
-            grid-column: 3 / 4;
+            grid-column: 3 / span 2;
             grid-row: 1;
-            @include star(1em, $star-color, 26em, 30em);
+            // @include star(1em, $star-color, 26em, 30em);
         }
         .benefits  {        //Benefits
-            grid-column: 1 / 2;
-            grid-row: 2;
-            @include star(1em, $star-color, 26em, 24em);
+            grid-column: 1 / span 2;
+            grid-row: 6;
+            // @include star(1em, $star-color, 26em, 24em);
         }
         .requirements  {    //Requirements
-            grid-column: 3 / 4;
-            grid-row: 2;
+            grid-column: 3 / span 2;
+            grid-row: 3;
         }
 
 
     //Sidebar
     .sidebar {
-      grid-column: col 11 / span 3;
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 1fr 1fr;
+      grid-column: col 12 / span 3;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
 }
 
       .wrapper {
-        background-color: lightgray;
 
             &> .design-selection {
                  //Select a Design
                     grid-column:  1/ 3;
                     grid-row: 1;
-
-
             }
             &> .design-archives {
                      //Archives
                     grid-column: 1 / 3;
                     grid-row: 2;
-
             }
             &> .zen-resources {
                  //Resources
                     grid-column: 1 / 3;
                     grid-row: 3;
-
             }
         }
 
@@ -171,5 +165,7 @@
     footer  {
         grid-column: 6 / span 3;
         grid-row: 9;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
     }
 }
