--- a/zen-garden/zen-garden2/scss/partials/_typography.scss
+++ b/zen-garden/zen-garden2/scss/partials/_typography.scss
@@ -25,7 +25,7 @@ h1{
   font-family: $titles;
   color: $header-color;
   font-size: $header1-size;
-  transform: rotate(-15deg);
+  transform: rotate(-5deg);
 
 }
 
@@ -53,7 +53,7 @@ a:hover{
   color: $hover-color;
   font-weight: bold;
   font-size: 36px;
-  transform: perspective(3px) translateZ(0) scale(1);
+  transform: perspective(3px) translateX(-3) scale(1);
   transition-duration: 1s;
   transition-property: transform;
 }
@@ -62,12 +62,3 @@ a:hover{
 // }
 
 li{list-style-type: none;}
-
-.design-name{
-  padding: 2px;
-}
-
-.participation{
-  font-size: 8px;
-  // transform: scale(2);
-}
